playground/notas_tests/invalid/bool-03.hulk
let x = true + 1 in print(x);
